--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,10 +5,11 @@
 }
 
 .container {
-  max-width: 1340px;
+  max-width: 97%;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
