--- a/src/appPages/site/components/layout/LayoutSite.module.scss
+++ b/src/appPages/site/components/layout/LayoutSite.module.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
+  padding: 20px 0;
+  .block {
+    display: flex;
+  }
   footer {
     margin-top: auto;
   }
