--- a/src/appPages/site/components/layout/LayoutSite.module.scss
+++ b/src/appPages/site/components/layout/LayoutSite.module.scss
@@ -7,6 +7,12 @@
   .block {
     display: flex;
   }
+  .auth {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+  }
   footer {
     margin-top: auto;
   }
