--- a/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
+++ b/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
@@ -1,11 +1,11 @@
 .modal {
   position: absolute;
-  z-index: 999;
+  z-index: 11000;
   color: #000;
   padding: 20px;
   border-radius: 12px;
   width: 100%;
-  height: 100%;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,6 +18,8 @@
     width: 500px;
     height: 500px;
     background: #fff;
+    position: absolute;
+    bottom: 100px;
     h3 {
       text-align: center;
       display: flex;
