--- a/src/provider/ModalProvider.module.scss
+++ b/src/provider/ModalProvider.module.scss
@@ -2,6 +2,9 @@
   background: #1a181882;
   width: 100%;
   height: 100vh;
-  position: relative;
-  z-index: 99;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  z-index: 1000;
 }
