--- a/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
+++ b/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
@@ -20,12 +20,21 @@
     background: #fff;
     position: absolute;
     bottom: 100px;
-    h3 {
-      text-align: center;
+
+    .navigation {
       display: flex;
-      flex-direction: column;
-      gap: 12px;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid rgb(172, 171, 171);
+      padding: 5px;
+
+      h3 {
+        gap: 12px;
+        font-weight: 400;
+        text-align: center;
+      }
     }
+
     .content {
       display: flex;
       align-items: center;
