--- a/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
+++ b/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
@@ -14,8 +14,8 @@
   .block {
     border: 1px solid gray;
     border-radius: 8px;
-    padding: 10px;
-    width: 500px;
+    // padding: 10px;
+    width: 600px;
     height: 500px;
     background: #fff;
     position: absolute;
@@ -26,7 +26,7 @@
       align-items: center;
       justify-content: space-between;
       border-bottom: 1px solid rgb(172, 171, 171);
-      padding: 5px;
+      padding: 15px;
 
       h3 {
         gap: 12px;
@@ -36,18 +36,26 @@
     }
 
     .content {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      margin-top: 80px;
-      gap: 20px;
+      // display: flex;
+      // align-items: center;
+      // flex-direction: column;
+      // gap: 20px;
+
+      .step1 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 80px;
+      }
 
       .imageSlider {
         width: 100%;
-        max-width: 500px;
         height: auto;
-        border-radius: 12px;
-
+        display: flex;
+        align-items: center;
+        justify-content: center;
         :global(.swiper-pagination-bullet) {
           background-color: white !important;
           opacity: 0.5;
@@ -59,10 +67,31 @@
         }
 
         .previewImage {
-          object-fit: cover;
           width: 100%;
-          height: auto;
-          border-radius: 8px;
+          object-fit: cover;
+          height: 446px;
+          border-radius: 0px 0px 8px 8px;
+        }
+      }
+
+      .box {
+        display: flex;
+        .imgBlock {
+          width: 320px;
+          .foto3 {
+            width: 100%;
+            object-fit: cover;
+            height: 446px;
+          }
+        }
+        .textBlock {
+          padding: 10px;
+          .head {
+            display: flex;
+            align-items: center;
+            justify-content: start;
+            gap: 10px;
+          }
         }
       }
 
