--- a/src/appPages/site/components/layout/LayoutSite.module.scss
+++ b/src/appPages/site/components/layout/LayoutSite.module.scss
@@ -2,13 +2,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  min-height: 90vh;
   padding: 20px 0;
   .block {
     display: flex;
-  }
-  main {
-    width: 100%;
+    main {
+      width: 100%;
+      height: 94vh;
+
+      overflow-y: scroll;
+
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
   }
   .auth {
     display: flex;
