--- a/src/provider/ModalProvider.module.scss
+++ b/src/provider/ModalProvider.module.scss
@@ -5,6 +5,13 @@
   position: fixed;
   top: 0;
   left: 0;
-
   z-index: 1000;
+
+  overflow-y: scroll;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
