--- a/src/appPages/site/components/pages/myUser/MyUser.module.scss
+++ b/src/appPages/site/components/pages/myUser/MyUser.module.scss
@@ -1,4 +1,5 @@
 .MyUser {
+  padding: 20px 0;
   .content {
     .header {
       display: flex;
@@ -8,19 +9,50 @@
       .blockImg {
       }
       .blockText {
+        margin-top: 30px;
         display: flex;
         align-items: center;
         justify-content: start;
+        flex-direction: column;
         gap: 20px;
-        button {
-          padding: 5px 15px;
-          border-radius: 8px;
-          border: 1px solid gray;
-          color: black;
+        .title {
+          display: flex;
+          gap: 30px;
+          h3 {
+            font-weight: 400;
+          }
+          button {
+            padding: 5px 15px;
+            border-radius: 8px;
+            border: 1px solid gray;
+            color: black;
+            font-size: 12;
+            font-weight: 700;
+          }
+        }
+        .follower {
+          display: flex;
+          align-items: start;
+          justify-content: start;
+          gap: 20px;
+          margin-right: auto;
+
+          h5 {
+            span {
+              color: black;
+            }
+            color: gray;
+            font-weight: 400;
+            font-size: 14px;
+          }
+        }
+        .about {
+          margin-right: auto;
         }
       }
     }
     .posts {
+      margin-top: 50px;
       display: flex;
       align-items: center;
       justify-content: start;
@@ -30,8 +62,6 @@
         object-fit: cover;
         cursor: pointer;
       }
-    }
-    .box {
     }
   }
 }
