--- a/src/appPages/site/components/pages/myUser/MyUser.module.scss
+++ b/src/appPages/site/components/pages/myUser/MyUser.module.scss
@@ -7,6 +7,10 @@
       justify-content: start;
       gap: 30px;
       .blockImg {
+        img {
+          border-radius: 50%;
+          object-fit: cover;
+        }
       }
       .blockText {
         margin-top: 30px;
