--- a/src/appPages/site/components/pages/Home.module.scss
+++ b/src/appPages/site/components/pages/Home.module.scss
@@ -1,2 +1,13 @@
 .Home {
+  padding: 30px 50px;
+  .content {
+    display: flex;
+    justify-content: space-between;
+    .main {
+    }
+    .blockRigth {
+      max-width: 400px;
+      width: 100%;
+    }
+  }
 }
