--- a/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
+++ b/src/appPages/site/components/pages/CreatePost/CreatingPuclication/CreatingPublication.module.scss
@@ -31,14 +31,17 @@
         font-weight: 400;
         text-align: center;
       }
+      button {
+        background: skyblue;
+        padding: 10px;
+        border-radius: 12px;
+        border: none;
+        color: white;
+        font-weight: 600;
+      }
     }
 
     .content {
-      // display: flex;
-      // align-items: center;
-      // flex-direction: column;
-      // gap: 20px;
-
       .step1 {
         display: flex;
         align-items: center;
@@ -78,12 +81,15 @@
           width: 320px;
           .foto3 {
             width: 100%;
-            object-fit: cover;
-            height: 446px;
+            height: 432px;
           }
         }
         .textBlock {
           padding: 10px;
+          display: flex;
+          align-items: start;
+          justify-content: start;
+          flex-direction: column;
           .head {
             display: flex;
             align-items: center;
