--- a/src/appPages/site/components/pages/Search/Search.module.scss
+++ b/src/appPages/site/components/pages/Search/Search.module.scss
@@ -80,6 +80,7 @@
             display: flex;
             align-items: center;
             gap: 20px;
+            cursor: pointer;
             h6 {
               font-size: 16px;
               font-weight: 300;
