--- a/src/appPages/site/components/pages/myUser/MyUser.module.scss
+++ b/src/appPages/site/components/pages/myUser/MyUser.module.scss
@@ -65,6 +65,11 @@
       .post {
         object-fit: cover;
         cursor: pointer;
+
+        img {
+          width: 400px;
+          height: 400px;
+        }
       }
     }
   }
