--- a/src/appPages/site/components/pages/modalDetail/ModalDetail.module.scss
+++ b/src/appPages/site/components/pages/modalDetail/ModalDetail.module.scss
@@ -11,9 +11,8 @@
   align-items: center;
   .content {
     .previewImage {
-      opacity: 1;
-      visibility: visible;
-      display: block;
+      cursor: pointer;
+      width: 200px;
     }
   }
 }
