--- a/src/appPages/site/components/pages/modalDetail/ModalDetail.module.scss
+++ b/src/appPages/site/components/pages/modalDetail/ModalDetail.module.scss
@@ -1,18 +1,20 @@
 .modal {
-  position: absolute;
-  z-index: 11000;
-  color: #000;
-  border-radius: 12px;
   width: 100%;
-
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
   .content {
-    .previewImage {
-      cursor: pointer;
-      width: 200px;
+    width: 80%;
+    max-width: 600px;
+    .swiper {
+      height: 600px;
+      background: #fff;
+      .swiper-slide {
+        .previewImage {
+          height: 400px;
+          object-fit: cover;
+        }
+      }
     }
   }
 }
