--- a/src/provider/ModalProvider.module.scss
+++ b/src/provider/ModalProvider.module.scss
@@ -1,17 +1,56 @@
-.overlay {
-  background: #1a181882;
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+// .modaal {
+//   background: white;
+//   border-radius: 12px;
+//   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+//   padding: 20px;
+//   width: 100%;
+//   max-width: 600px;
+//   position: relative;
+//   display: flex;
+//   flex-direction: column;
+//   text-align: center;
+//   font-family: Arial, sans-serif;
+//   main {
+//     width: 100%;
+//   }
 
-  overflow-y: scroll;
+//   .overlay {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100vw;
+//     height: 100vh;
+//     background: rgba(0, 0, 0, 0.5);
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     z-index: 1000;
+//     .modal {
+//       .closeButton {
+//         position: absolute;
+//         top: 10px;
+//         right: 10px;
+//         background: none;
+//         border: none;
+//         font-size: 24px;
+//         cursor: pointer;
+//       }
 
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
+//       img {
+//         max-width: 100%;
+//         border-radius: 10px;
+//         margin-bottom: 10px;
+//       }
+
+//       h2 {
+//         font-size: 18px;
+//         margin-bottom: 10px;
+//       }
+
+//       p {
+//         font-size: 16px;
+//         color: #444;
+//       }
+//     }
+//   }
+// }
