--- a/src/appPages/site/components/pages/modalDetail/ModalDetail.module.scss
+++ b/src/appPages/site/components/pages/modalDetail/ModalDetail.module.scss
@@ -4,15 +4,45 @@
   align-items: center;
   flex-direction: column;
   .content {
-    width: 80%;
-    max-width: 600px;
-    .swiper {
-      height: 600px;
-      background: #fff;
-      .swiper-slide {
-        .previewImage {
-          height: 400px;
-          object-fit: cover;
+    width: 100%;
+    height: 500px;
+
+    .block {
+      width: 100%;
+      display: flex;
+      align-items: start;
+      justify-content: center;
+      gap: 10px;
+      padding: 0px;
+
+      .swiper {
+        width: 60%;
+        .swiperSlide {
+          width: 100%;
+          .previewImage {
+            object-fit: cover;
+            height: 500px;
+          }
+        }
+      }
+
+      .textBox {
+        .header {
+          display: flex;
+          align-items: center;
+          justify-content: start;
+          gap: 10px;
+          image {
+            object-fit: cover;
+          }
+          h3 {
+            font-weight: 400;
+          }
+          span {
+            color: skyblue;
+            cursor: pointer;
+            font-size: 14px;
+          }
         }
       }
     }
